--- a/styles.scss
+++ b/styles.scss
@@ -22,7 +22,7 @@ $avenir: "Avenir";
 @mixin h1 {
   font-family: $palatino;
   color: $white;
-  font-size: 5vw;
+  font-size: 4vw;
   line-height: 70px;
   font-style: normal;
   text-align: left;
@@ -42,16 +42,16 @@ $avenir: "Avenir";
 @mixin p {
   font-family: $avenir;
   color: $black;
-  font-size: 1.5vw;
+  font-size: 1.2vw;
   font-style: normal;
   font-weight: 400;
-  line-height: 22px;
+  line-height: 1.5;
   text-align: left;
   font-weight: lighter;
 }
 @mixin buttonPrimary {
-  font-size: 1.8vw;
-  line-height: 30px;
+  font-size: 1.4vw;
+  line-height: 1.8;
   font-family: $avenir;
   height: 45px;
   width: max-content;
@@ -76,8 +76,8 @@ $avenir: "Avenir";
 }
 
 @mixin buttonSecondary {
-  font-size: 1.6vw;
-  line-height: 30px;
+  font-size: 1.4vw;
+  line-height: 1.6;
   font-family: $avenir;
   height: 40px;
   width: max-content;
@@ -619,6 +619,7 @@ body {
                 list-style: none;
                 display: flex;
                 flex-direction: column;
+                padding: 5px 0;
 
                 a {
                   color: $white;
@@ -628,8 +629,8 @@ body {
                   font-family: $avenir;
                   font-weight: 400;
                   font-style: normal;
-                  font-size: 1.5vw;
-                  line-height: 26.4px;
+                  font-size: 1.2vw;
+                  line-height: 1.2;
                   display: flex;
                   align-items: center;
                   color: $black;
@@ -806,12 +807,15 @@ body {
 
           h1 {
             @include h1;
-            font-size: 2.5vw;
+            line-height: 1.5;
+            font-size: 10vw;
           }
 
           h3 {
             @include h3;
-            font-size: 1.5vw;
+            font-size: 3vw;
+            line-height: 1.6;
+
           }
           button {
             display: none;
@@ -850,21 +854,25 @@ body {
             display: flex;
             flex-direction: column;
             justify-content: center;
+            margin-top: 20px;
 
             h2 {
               @include h2;
               margin: 0;
-              font-size: 2.5vw;
+              font-size: 5vw;
             }
 
             p {
               @include p;
+              font-size: 3vw;
+              margin-top: 0;
             }
             button {
               @include buttonSecondary;
               position: relative;
               left: 50%;
               transform: translateX(-50%);
+              font-size: 4vw;
             }
           }
         }
@@ -877,9 +885,8 @@ body {
         h2 {
           @include h2;
           text-align: left;
-          margin: 0;
-          font-size: 2.5vw;
           margin: 0 45px;
+          font-size: 5vw;
         }
 
         .competences-wrapper {
@@ -916,13 +923,14 @@ body {
               h4 {
                 font-family: $palatino;
                 color: $white;
-                font-size: 2vw;
-                line-height: 32px;
+                font-size: 5vw;
+                line-height: 1.5;
                 margin: 0;
               }
               p {
                 @include p;
                 color: $white;
+                font-size: 3vw;
               }
             }
           }
@@ -940,8 +948,8 @@ body {
         #mobile {
           @include h2;
           margin: 0;
-          font-size: 2.5vw;
           margin-left: 45px;
+          font-size: 5vw;
         }
 
         div {
@@ -975,8 +983,8 @@ body {
                 font-family: $avenir;
                 font-weight: 400;
                 font-style: normal;
-                font-size: 1.5vw;
-                line-height: 26.4px;
+                font-size: 3vw;
+                line-height: 1.2;
                 display: flex;
                 align-items: center;
                 position: relative;
@@ -1019,18 +1027,20 @@ body {
           margin: 0 45px;
           h1 {
             @include h1;
-            font-size: 2.5vw;
+            font-size: 5vw;
             line-height: 48px;
           }
           p {
             @include p;
             color: $white;
+            font-size: 3vw;
           }
           button {
             @include buttonSecondary;
             position: relative;
             left: 50%;
             transform: translateX(-50%);
+            font-size: 4vw;
           }
         }
       }
@@ -1056,12 +1066,14 @@ body {
             z-index: 1111;
             h2 {
               @include h2;
-              font-size: 2vw;
               text-transform: capitalize;
+              font-size: 5vw;
             }
 
             p {
               @include p;
+              font-size: 3vw;
+              line-height: 1.5;
             }
           }
 
@@ -1072,7 +1084,7 @@ body {
 
             h2 {
               @include h2;
-              font-size: 2vw;
+              font-size: 5vw;
               text-transform: capitalize;
             }
             ul {
@@ -1081,6 +1093,7 @@ body {
                 list-style: none;
                 display: flex;
                 flex-direction: column;
+                margin-top: 10px;
 
                 a {
                   color: $white;
@@ -1090,8 +1103,8 @@ body {
                   font-family: $avenir;
                   font-weight: 400;
                   font-style: normal;
-                  font-size: 1.5vw;
-                  line-height: 26.4px;
+                  font-size: 3vw;
+                  line-height: 1.5;
                   display: flex;
                   align-items: center;
                   color: $black;
